--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
